tests/baselines/reference/duplicateIdentifiersAcrossFileBoundaries.errors.txt
tests/cases/compiler/file1.ts(3,7): error TS2300: Duplicate identifier 'C2'.
tests/cases/compiler/file1.ts(4,10): error TS2300: Duplicate identifier 'f'.
tests/cases/compiler/file1.ts(8,12): error TS2300: Duplicate identifier 'x'.
tests/cases/compiler/file2.ts(3,10): error TS2300: Duplicate identifier 'C2'.
tests/cases/compiler/file2.ts(4,7): error TS2300: Duplicate identifier 'f'.
tests/cases/compiler/file2.ts(7,8): error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
tests/cases/compiler/file2.ts(8,16): error TS2300: Duplicate identifier 'x'.


==== tests/cases/compiler/file1.ts (3 errors) ====
    interface I { }
    class C1 { }
    class C2 { }
          ~~
!!! error TS2300: Duplicate identifier 'C2'.
!!! related TS6203 tests/cases/compiler/file2.ts:3:10: 'C2' was also declared here.
    function f() { }
             ~
!!! error TS2300: Duplicate identifier 'f'.
!!! related TS6203 tests/cases/compiler/file2.ts:4:7: 'f' was also declared here.
    var v = 3;
    
    class Foo {
        static x: number;
               ~
!!! error TS2300: Duplicate identifier 'x'.
!!! related TS6203 tests/cases/compiler/file2.ts:8:16: 'x' was also declared here.
    }
    
    module N {
        export module F {
            var t;
        }
    }
    
==== tests/cases/compiler/file2.ts (4 errors) ====
    class I { } // error -- cannot merge interface with non-ambient class
    interface C1 { } // error -- cannot merge interface with non-ambient class
    function C2() { } // error -- cannot merge function with non-ambient class
             ~~
!!! error TS2300: Duplicate identifier 'C2'.
!!! related TS6203 tests/cases/compiler/file1.ts:3:7: 'C2' was also declared here.
    class f { } // error -- cannot merge function with non-ambient class
          ~
!!! error TS2300: Duplicate identifier 'f'.
!!! related TS6203 tests/cases/compiler/file1.ts:4:10: 'f' was also declared here.
    var v = 3;
    
    module Foo {
           ~~~
!!! error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
        export var x: number; // error for redeclaring var in a different parent
                   ~
!!! error TS2300: Duplicate identifier 'x'.
!!! related TS6203 tests/cases/compiler/file1.ts:8:12: 'x' was also declared here.
    }
    
    declare module N {
        export function F(); // no error because function is ambient
    }
    